--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,4 +1,16 @@
+Click==7.0
+easydict==1.9
 Flask==1.1.1
+flask-marshmallow==0.10.1
+flask-serialize==1.1.5
 Flask-SQLAlchemy==2.4.1
-psycopg2-binary==2.8.3
-gunicorn==19.9.0
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+marshmallow==3.4.0
+marshmallow-sqlalchemy==0.21.0
+psycopg2-binary==2.8.4
+six==1.14.0
+SQLAlchemy==1.3.13
+Werkzeug==0.16.1
